<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.grepthor.fragmentex26.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
       android:src="@drawable/fulllogo" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView

            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:layout_below="@+id/imageView2"
            android:fillViewport="true"
            android:orientation="vertical"
            tools:ignore="InvalidId"
            android:layout_marginBottom="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cacchampagne"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/home_card1_help_heading"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:fontFamily="@font/arizoniaregular"
                        android:padding="5dp"
                        android:text="@string/home_card1_help"
                        android:textColor="#000"
                        android:textSize="15sp" />


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cacchampagne"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/home_card1_blood_heading"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="35dp"
                        android:fontFamily="@font/arizoniaregular"
                        android:padding="5dp"
                        android:text="@string/home_card1_help"
                        android:textColor="#000"
                        android:textSize="15sp" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cacchampagne"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/home_card1_camp_heading"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="35dp"
                        android:fontFamily="@font/arizoniaregular"
                        android:padding="5dp"
                        android:text="@string/home_card1_camp"
                        android:textColor="#000"
                        android:textSize="15sp" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>


    <Button

            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_button"
        android:textAllCaps="true"
            android:textColor="#fff"
            android:textStyle="bold"
            tools:ignore="UnknownId"
            android:id="@+id/bu1"/>
</RelativeLayout>
